<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_Home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".User_Home"
        tools:layout_editor_absoluteX="-183dp"
        tools:layout_editor_absoluteY="-61dp">

        <Button
            android:id="@+id/createItem"
            android:layout_width="142dp"
            android:layout_height="71dp"
            android:layout_marginTop="75dp"
            android:text="@string/create_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/manageItems" />

        <Button
            android:id="@+id/itemDelegation"
            android:layout_width="142dp"
            android:layout_height="71dp"
            android:layout_marginTop="75dp"
            android:text="@string/item_delegation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createItem" />

        <Button
            android:id="@+id/manageItems"
            android:layout_width="142dp"
            android:layout_height="71dp"
            android:layout_marginTop="150dp"
            android:text="@string/manage_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

        <Button
            android:id="@+id/logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="75dp"
            android:text="@string/log_out"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>